@@ -1,3 +1,12 @@
+2010-10-14  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/disp32.d: New.
+	* gas/i386/disp32.s: Likewise.
+	* gas/i386/x86-64-disp32.d: Likewise.
+	* gas/i386/x86-64-disp32.s: Likewise.
+
+	* gas/i386/i386.exp: Run disp32 and x86-64-disp32.
+
 2010-10-11  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
 
 	* gas/s390/zarch-z196.d: Adjust the load/store on condition
